--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "This is application represents an attempt to create a small static webpage showing my portofolio.",
   "main": "app.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "modules": "^0.4.0",
-    "node": "^15.4.0"
+    "node": "^15.4.0",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "start nodemon app.js"
   },
   "repository": {
     "type": "git",
