--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "gulp": "^4.0.2",
     "modules": "^0.4.0",
     "node": "^15.4.0",
     "nodemon": "^2.0.7"
