--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This is application represents an attempt to create a small static webpage showing my portofolio.",
   "main": "app.js",
   "dependencies": {
+    "@splidejs/splide": "^2.4.21",
+    "codyhouse-framework": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -11,12 +13,15 @@
     "gulp": "^4.0.2",
     "modules": "^0.4.0",
     "node": "^15.4.0",
-    "nodemon": "^2.0.7"
+    "node-sass": "^5.0.0",
+    "nodemon": "^2.0.7",
+    "sass": "^1.32.4",
+    "webpack": "^5.15.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "start nodemon app.js"
+    "watch": "start nodemon app.js && start node-sass --watch public/scss -o public/css"
   },
   "repository": {
     "type": "git",
