--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "node": "^15.4.0",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
-    "sass": "^1.32.4",
-    "webpack": "^5.15.0"
+    "sass": "^1.32.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "start nodemon app.js && start node-sass --watch public/scss -o public/css"
+    "watch": "start nodemon app.js && start node-sass --watch public/scss -o public/css && ",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
